--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
         </div>
         <p class="text-heading"> Седона — небольшой городок в Аризоне,<br>
-          заслуживающий большего!</br></p>
+          заслуживающий большего!</p>
         <p class="text reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
@@ -119,8 +119,8 @@
                 <h3 class="advantages-title decorative_element-none">Сувениры</h3>
                 <p class="advantages-description">Не только китайского,<br>но и настоящего местного<br> производства!
                 </p>
+              </li>
             </div>
-            </li>
           </ul>
         </section>
         <section class="apointment">
