--- a/catalog.html
+++ b/catalog.html
@@ -90,6 +90,7 @@
                           <span class="control-label">Wi-Fi</span>
                         </label>
                       </li>
+                    </ul>
                   </fieldset>
 
                   <fieldset class="catalog-filter-group">
@@ -116,6 +117,7 @@
                           <span class="control-label">Апартаменты</span>
                         </label>
                       </li>
+                    </ul>
                   </fieldset>
                 </div>
                 <div class="price-help-1">
@@ -140,6 +142,7 @@
                   <button class="button-throw_off" type="submit">Сбросить</button>
                 </div>
               </form>
+            </section>
           </div>
         </div>
         <div class="selector">
@@ -168,11 +171,11 @@
               <span class="visually-hidden">Показать все</span>
               <svg class="catalog-icon" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#a)" fill="#000">
+                <g clip-path="url(#b)" fill="#000">
                   <path d="M16 12H0v2h16v-2ZM14 2v6H2V2h12Zm2-2H0v10h16V0Z" />
                 </g>
                 <defs>
-                  <clipPath id="a">
+                  <clipPath id="b">
                     <path fill="#fff" d="M0 0h16v14H0z" />
                   </clipPath>
                 </defs>
@@ -182,12 +185,12 @@
               <span class="visually-hidden">Показать список</span>
               <svg class="catalog-icon" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g clip-path="url(#a)" fill="#000">
+                <g clip-path="url(#c)" fill="#000">
                   <path d="M2 0H0v2h2V0ZM16 0H4v2h12V0ZM2 4H0v2h2V4ZM16 4H4v2h12V4ZM2 8H0v2h2V8ZM16
                  8H4v2h12V8ZM2 12H0v2h2v-2ZM16 12H4v2h12v-2Z" />
                 </g>
                 <defs>
-                  <clipPath id="a">
+                  <clipPath id="c">
                     <path fill="#fff" d="M0 0h16v14H0z" />
                   </clipPath>
                 </defs>
