--- a/catalog.html
+++ b/catalog.html
@@ -54,9 +54,11 @@
           <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
             <section class="breadcrumbs">
-              <a class="breadcrumbs-link" href="catalog.html">
-                <img class="breadcrumbs-icon" src="images/breadcrams_logo_1.svg" width="12" height="12">
-                <img class="breadcrumbs-icon" src="images/breadcrams_logo_2.svg" width="7" height="10">
+              <a class="breadcrumbs-link main" href="index.html">
+                <img class="breadcrumbs-icon" src="images/breadcrams_logo_1.svg" width="12" height="12" alt="На главную">
+              </a>
+              <a class="breadcrumbs-link catalog" href="catalog.html">
+                <img class="breadcrumbs-icon" src="images/breadcrams_logo_2.svg" width="7" height="10" alt="Текущая страница">
                 Гостиницы
               </a>
             </section>
