--- a/index.html
+++ b/index.html
@@ -69,22 +69,21 @@
               <div class="help blue">
                 <div class="help-text">
                   <h3 class="advantages-title-real_town">Настоящий городок</h3>
-                  <p class="advantages-description-real_town"> Седона — не аттракцион для туристов, там течёт своя жизнь
-                  </p>
+                  <p class="advantages-description-real_town"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
                 <img class="picture" src="images/real_town.jpg" width="800" height="384" alt="Настоящий городок">
               </div>
             </li>
             <div class="advantages-help">
-              <li class="advantages-item">
+              <li class="advantages-item another">
                 <h3 class="advantages-title decorative_element">Небольшая площадь</h3>
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </li>
-              <li class="advantages-item">
+              <li class="advantages-item another">
                 <h3 class="advantages-title decorative_element">Красивая<br> дорога</h3>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
-              <li class="advantages-item">
+              <li class="advantages-item another">
                 <h3 class="advantages-title decorative_element">Мало<br> туристов</h3>
                 <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
@@ -164,9 +163,13 @@
                     <span class="help-popover">Взрослые:</span>
                     <div class="popover-rithg">
                       <div class="popover-slider">
-                        <button type="button" class="minus slider-btn">-</button>
+                        <button type="button" class="minus slider-btn">
+                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус">
+                        </button>
                         <input class="number" type="text" value="2">
-                        <button type="button" class="plus slider-btn">+</button>
+                        <button type="button" class="plus slider-btn">
+                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс">
+                        </button>
                       </div>
                     </div>
                   </div>
@@ -174,14 +177,18 @@
                   <div class="popover-slaider-child">
                     <div class="children">
                       <span class="help-popover help-popover-children">Дети:</span>
-                      <img class="popover-icon" src="images/popover_icon.png" width="26" height="26"
+                      <img class="popover-icon" src="images/popover_icon.png" width="40" height="40"
                         alt="Правила для детей">
                     </div>
                     <div class="popover-rithg">
                       <div class="popover-slider">
-                        <button type="button" class="minus slider-btn">-</button>
+                        <button type="button" class="minus slider-btn">
+                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус">
+                        </button>
                         <input class="number" type="text" value="2">
-                        <button type="button" class="plus slider-btn">+</button>
+                        <button type="button" class="plus slider-btn">
+                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс">
+                        </button>
                       </div>
                     </div>
                     <div class="popover-slaider-child-icon">
@@ -196,8 +203,8 @@
               </form>
             </div>
           </div>
-
         </section>
+
         <section class="newsletter">
           <h2 class="page-main-title">Подпишитесь на рассылку</h2>
           <p class="text-newsletter">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
