--- a/catalog.html
+++ b/catalog.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico" width="32" height="32">
   </head>
 
   <body>
     <div class="container">
       <header class="page-header">
         <a class="logo-header" href="index.html">
-          <img class="page-header-logo" src="images/logo.svg" width="145" height="75" alt="Логотип Города Седоны">
+          <img class="page-header-logo" src="images/logo.svg" width="145" height="75" alt="Логотип Города Седоны.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -28,7 +29,7 @@
           <ul class="navigation-user">
             <li class="navigation-item">
               <button class="navigation-link search" type="button">
-                <img class="navigation-link-icon" src="images/search.svg" width="20" height="20" alt="Поиск">
+                <img class="navigation-link-icon" src="images/search.svg" width="20" height="20" alt="Поиск.">
               </button>
               <span class="visually-hidden">
                 Поиск
@@ -36,7 +37,7 @@
             </li>
             <li class="navigation-item">
               <button class="navigation-link like" type="button">
-                <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное">
+                <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное.">
                 <span class="count-like">12</span>
               </button>
               <span class="visually-hidden">
@@ -55,10 +56,12 @@
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
             <section class="breadcrumbs">
               <a class="breadcrumbs-link main" href="index.html">
-                <img class="breadcrumbs-icon" src="images/breadcrams_logo_1.svg" width="12" height="12" alt="На главную">
+                <img class="breadcrumbs-icon" src="images/breadcrams_logo_1.svg" width="12" height="12"
+                  alt="На главную.">
               </a>
               <a class="breadcrumbs-link catalog" href="catalog.html">
-                <img class="breadcrumbs-icon" src="images/breadcrams_logo_2.svg" width="7" height="10" alt="Текущая страница">
+                <img class="breadcrumbs-icon" src="images/breadcrams_logo_2.svg" width="7" height="10"
+                  alt="Текущая страница.">
                 Гостиницы
               </a>
             </section>
@@ -96,7 +99,7 @@
                   </fieldset>
 
                   <fieldset class="catalog-filter-group">
-                    <legend class="catalog-filter-title">Тип жилья:</legend>
+                    <legend class="catalog-filter-title">Тип Жилья:</legend>
                     <ul class="catalog-filter-list">
                       <li class="catalog-filter-item">
                         <label class="control">
@@ -125,8 +128,10 @@
                 <div class="price-help-1">
                   <h3 class="advantages-title-price">Стоимость, ₽:</h3>
                   <div class="input-help">
-                    <input class="price" placeholder="От" type="number">
-                    <input class="price" placeholder="До" type="number">
+                    <label class="visually-hidden">Стоимость от</label>
+                    <input class="price" placeholder="от" type="number">
+                    <label class="visually-hidden">Стоимость до</label>
+                    <input class="price" placeholder="до" type="number">
                   </div>
                   <div class="range-scale">
                     <button type="button" class="range-toggle toggle-min">
@@ -136,7 +141,7 @@
                       <span class="visually-hidden">Изменить максимальную цену.</span>
                     </button>
                   </div>
-                  <div class="range-bar" style="right: 60px; width: 100px;">
+                  <div class="range-bar" style="right: 60px; width: 60px;">
                   </div>
                 </div>
                 <div class="price-help-2">
@@ -149,7 +154,7 @@
         </div>
         <div class="selector">
           <h3 class="inner-title">Найдено гостиниц: 38</h3>
-          <select class="select-control" aria-label="Сортировка">
+          <select class="select-control" aria-label="Сортировка.">
             <option value="popular">Сначала дешёвые</option>
             <option value="cheap">Сначала популярные</option>
             <option value="expensive">Сначала дорогие</option>
@@ -160,7 +165,7 @@
               <svg class="catalog-icon" aria-hidden="true" focusable="false" width="16" height="14" viewBox="0 0 16 14"
                 fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#a)" fill="#000">
-                  <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z" />
+                  <path d="M4 0H0v6h4V0ZM16 0h-4v6h4V0ZM10 0H6v6h4V0ZM4 8H0v6h4V8ZM16 8h-4v6h4V8ZM10 8H6v6h4V8Z"/>
                 </g>
                 <defs>
                   <clipPath id="a">
@@ -204,7 +209,7 @@
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/amara_resort_spa.jpg" width="300" height="212"
-                alt="Amara Resort & Spa">
+                alt="Amara Resort & Spa.">
               <h4 class="product-card-title">Amara Resort & Spa</h4>
             </a>
             <div class="price-help">
@@ -213,10 +218,10 @@
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <button class="product-card-button button_favourites" type="button">в избранное</button>
               <div class="stars">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
               </div>
               <span class="text-rating">Рейтинг: 8,5</span>
             </div>
@@ -225,7 +230,7 @@
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/villas_at_poco_diablo.jpg" width="300" height="212"
-                alt="Villas at Poco Diablo">
+                alt="Villas at Poco Diablo.">
               <h4 class="product-card-title">Villas at Poco Diablo</h4>
             </a>
             <div class="price-help">
@@ -234,10 +239,10 @@
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <button class="product-card-button button_favourites_green" type="button">в избранное</button>
               <div class="stars">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
               </div>
               <span class="text-rating">Рейтинг: 9,2</span>
             </div>
@@ -246,7 +251,7 @@
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/desert_quail_inn.jpg" width="300" height="212"
-                alt="Desert Quail Inn">
+                alt="Desert Quail Inn.">
               <h4 class="product-card-title">Desert Quail Inn</h4>
             </a>
             <div class="price-help">
@@ -255,9 +260,9 @@
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <button class="product-card-button button_favourites" type="button">в избранное</button>
               <div class="stars">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
               </div>
               <span class="text-rating">Рейтинг: 6,9</span>
             </div>
@@ -266,7 +271,7 @@
           <li class="product-card">
             <a class="product-card-link" href="product.html">
               <img class="product-card-image" src="images/greentree_inn.jpg" width="300" height="212"
-                alt="GreenTree Inn">
+                alt="GreenTree Inn.">
               <h4 class="product-card-title">GreenTree Inn</h4>
             </a>
             <div class="price-help">
@@ -275,8 +280,8 @@
               <a class="product-card-button button_detailed" href="#">подробнее</a>
               <button class="product-card-button button_favourites" type="button">в избранное</button>
               <div class="stars">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
-                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
+                <img class="rating-stars" src="images/rating_star.svg" width="18" height="17" alt="Звезда рейтинга.">
               </div>
               <span class="text-rating">Рейтинг: 5,0</span>
             </div>
@@ -309,13 +314,15 @@
           <h2 class="page-main-title-catalog">Подпишитесь на рассылку</h2>
           <p class="text-newsletter-catalog">Только полезная информация и никакого спама,<br>честное бойскаутское!
           </p>
-          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post"></form>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
           <div class="help-newsletter">
+            <label class="visually-hidden">Ваш e-mail</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button newsletter-button" type="submit">
               Подписаться
             </button>
+          </form>
           </div>
         </section>
       </main>
@@ -360,8 +367,7 @@
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
           <svg class="htmlacademy-logo" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
             <path
-              d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"
-              alt="Логотип HTML-academy" />
+              d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
           </svg>
         </a>
       </footer>
