--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
   </head>
-
   <body>
     <div class="container">
       <header class="page-header">
         <a class="logo-header" href="index.html">
-          <img class="page-header-logo" src="images/logo.svg" width="145" height="75" alt="Логотип Города Седоны">
+          <img class="page-header-logo" src="images/logo.svg" width="145" height="75" alt="Логотип Города Седоны.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -41,7 +41,7 @@
             </li>
             <li class="navigation-item">
               <button class="navigation-link like" type="button">
-                <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное">
+                <img class="navigation-link-icon" src="images/heart.svg" width="20" height="20" alt="Избранное.">
                 <span class="count-like">12</span>
               </button>
               <span class="visually-hidden">
@@ -57,7 +57,7 @@
       <main class="main-container main-index">
         <div class="baner">
           <h1 class="visually-hidden">Седона</h1>
-          <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны">
+          <img class="logo" src="images/welcome_to_sedona.svg" width="458" height="352" alt="Логотип Седоны.">
         </div>
         <p class="text-heading"> Седона — небольшой городок в Аризоне,<br>
           заслуживающий большего!</p>
@@ -71,7 +71,7 @@
                   <h3 class="advantages-title-real_town">Настоящий городок</h3>
                   <p class="advantages-description-real_town"> Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                 </div>
-                <img class="picture" src="images/real_town.jpg" width="800" height="384" alt="Настоящий городок">
+                <img class="picture" src="images/real_town.jpg" width="800" height="384" alt="Настоящий городок.">
               </div>
             </li>
             <div class="advantages-help">
@@ -90,7 +90,7 @@
             </div>
             <li class="advantages-item-1">
               <div class="help blue">
-                <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола">
+                <img class="picture" src="images/devil's_bridge.jpg" width="800" height="384" alt="Мост дьявола.">
                 <div class="help-text">
                   <h3 class="advantages-title-devils_bridge">Там есть<br> мост дьявола</h3>
                   <p class="advantages-description-devils_bridge"> Да, по нему можно пройти! Если вы осмелитесь,
@@ -103,18 +103,18 @@
           <ul class="advantages-list">
             <div class="advantages-help">
               <li class="advantages-item">
-                <img class="advantages-icon" src="images/house.svg" width="75" height="72" alt="Дом">
+                <img class="advantages-icon" src="images/house.svg" width="75" height="72" alt="Дом.">
                 <h3 class="advantages-title decorative_element-none">Жильё</h3>
                 <p class="advantages-description">Рекомендуем пожить<br> в настоящем мотеле,<br>всё как в кино!</p>
               </li>
               <li class="advantages-item">
-                <img class="advantages-icon" src="images/food.svg" width="75" height="72" alt="Еда">
+                <img class="advantages-icon" src="images/food.svg" width="75" height="72" alt="Еда.">
                 <h3 class="advantages-title decorative_element-none">Еда</h3>
                 <p class="advantages-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не
                   разочаруетесь!</p>
               </li>
               <li class="advantages-item">
-                <img class="advantages-icon" src="images/souvenirs.svg" width="75" height="72" alt="Сувениры">
+                <img class="advantages-icon" src="images/souvenirs.svg" width="75" height="72" alt="Сувениры.">
                 <h3 class="advantages-title decorative_element-none">Сувениры</h3>
                 <p class="advantages-description">Не только китайского,<br>но и настоящего местного<br> производства!
                 </p>
@@ -147,14 +147,14 @@
                 <div class="field-group popover-form-date">
                   <label class="form-label" for="popover-date-1">Дата заезда:</label>
                   <input class="field-popover" type="text" id="popover-date-1" name="popover-date-1"
-                    placeholder="27 апреля 2020">
+                    placeholder="27 апреля 2020"  required>
                   <span class="date-1">Мы не можем отправить вас в прошлое.</span>
                 </div>
 
                 <div class="field-group popover-form-date">
-                  <label class="form-label" for="popover-date-2">Дата выезда:</label>
+                  <label class="form-label" for="popover-date-2" >Дата выезда:</label>
                   <input class="field-popover" type="text" id="popover-date-2" name="popover-date-2"
-                    placeholder="1 сентября 2023">
+                    placeholder="1 сентября 2023"  required>
                   <span class="date-2">На эти даты есть свободные номера. Пока есть.</span>
                 </div>
 
@@ -164,11 +164,12 @@
                     <div class="popover-rithg">
                       <div class="popover-slider">
                         <button type="button" class="minus slider-btn">
-                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус">
+                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус.">
                         </button>
+                        <label class="visually-hidden">Количество взрослых</label>
                         <input class="number" type="text" value="2">
                         <button type="button" class="plus slider-btn">
-                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс">
+                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс.">
                         </button>
                       </div>
                     </div>
@@ -178,16 +179,17 @@
                     <div class="children">
                       <span class="help-popover help-popover-children">Дети:</span>
                       <img class="popover-icon" src="images/popover_icon.png" width="40" height="40"
-                        alt="Правила для детей">
+                        alt="Правила для детей.">
                     </div>
                     <div class="popover-rithg">
                       <div class="popover-slider">
                         <button type="button" class="minus slider-btn">
-                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус">
+                          <img class="minus-icon" src="images/minys.svg" width="14" height="2" alt="Кнопка Минус.">
                         </button>
+                        <label class="visually-hidden">Количество детей</label>
                         <input class="number" type="text" value="2">
                         <button type="button" class="plus slider-btn">
-                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс">
+                          <img class="plus-icon" src="images/plus.svg" width="14" height="14" alt="Кнопка Плюс.">
                         </button>
                       </div>
                     </div>
@@ -199,7 +201,7 @@
                     </div>
                   </div>
                 </div>
-                <button class="popover-search" type="button">Найти</button>
+                <button class="popover-search" type="submit">Найти</button>
               </form>
             </div>
           </div>
@@ -210,6 +212,7 @@
           <p class="text-newsletter">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="help-newsletter">
+              <label class="visually-hidden">Ваш e-mail</label>
               <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
                 required>
               <button class="button newsletter-button" type="submit">
@@ -260,8 +263,7 @@
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
           <svg class="htmlacademy-logo" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
             <path
-              d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"
-              alt="Логотип HTML-academy" />
+              d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
           </svg>
         </a>
       </footer>
